--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP
+	m2tech
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>m2tech</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -135,7 +135,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; moaz</li><li>
+						
 					</div>
 
 			</div>
