--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<h2><a href="#">انضموا لينا </a></h2>
 									<p></p>
 								</header>
-								<a href="#" class="image main"><img src="images/pico01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/pic10.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">whatch</a></li>
 								</ul>
@@ -71,7 +71,7 @@
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">شاهد الفيديو</a></li>
+										<li><a href="#" class="button"><link rel="import" href="component.html"></a></li>
 									</ul>
 								</article>
 								<article>
