--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 										
 										<h2><a href="#">1</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="ملخص مؤتمر ابل للمطورين | بتقلد الاندرويد !!!!!
+									https://youtu.be/SXWcILMiF9k" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
 										<li><a href="#" class="button"><link rel="import" href="component.html"></a></li>
