--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
 										
 										<h2><a href="#">1</a></h2>
 									</header>
-									<a href="ملخص مؤتمر ابل للمطورين | بتقلد الاندرويد !!!!!
-									https://youtu.be/SXWcILMiF9k" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href=""  class="image fit"><img src="images/pic11.jpg" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
-										<li><a href="#" class="button"><link rel="import" href="component.html"></a></li>
+										<li><a href=https://youtu.be/SXWcILMiF9k>شاهد الفيديو</a></li>
 									</ul>
 								</article>
 								<article>
